# klv-parser-cpp

./: CMakeLists.txt  Config.h.in  README.md  klvparser.cpp
klvparser/: KLVParser.cpp  KLVParser.h  StreamParser.cpp  StreamParser.h  common.cpp  common.h
